--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    hahaha
+    <h1>숫자 맞추기 게임!</h1>
+    <div id="result-area">결과가 나온다</div>
+    <input type="number" id="user-input"/>
+    <button id="play-button">go!</button>
     <script src="main.js"></script>
 </body>
 </html>
